--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage --coverageReporters='text-summary'",
+    "lint:ts": "eslint . --ext ts",
+    "lint:ts:fix": "eslint . --ext ts --fix",
     "prepare": "husky install"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jozefhruska/omgi.git"
   },
+  "files": [
+    "dist/**"
+  ],
   "author": "Jozef Hruška",
   "license": "MIT",
   "bugs": {
@@ -21,13 +26,18 @@
   },
   "homepage": "https://github.com/jozefhruska/omgi#readme",
   "devDependencies": {
+    "@types/jest": "~27.4.1",
+    "@typescript-eslint/eslint-plugin": "~5.18.0",
+    "@typescript-eslint/parser": "~5.18.0",
+    "eslint": "~8.13.0",
+    "eslint-config-prettier": "~8.5.0",
     "husky": "~7.0.4",
-    "lint-staged": "~12.3.7",
+    "jest": "~27.5.1",
     "prettier": "~2.6.2",
     "rollup": "~2.70.1",
     "rollup-plugin-dts": "~4.2.0",
     "rollup-plugin-esbuild": "~4.8.2",
-    "tsc": "~2.0.4",
+    "ts-jest": "~27.1.4",
     "typescript": "~4.6.3"
   }
 }
