--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,27 +7,27 @@ on:
     branches: [ main ]
 
 jobs:
-  unit:
+  tests:
     name: "Tests"
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: "16.x"
       - run: npm install
       - run: npm run test
 
-  storybook:
+  lint:
     name: "Lint"
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: "16.x"
       - run: npm install
