--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "rollup-plugin-esbuild": "~4.8.2",
     "ts-jest": "~27.1.4",
     "typescript": "~4.6.3"
+  },
+  "dependencies": {
+    "query-string": "~7.1.1"
   }
 }
